adapt mainpage without burger 'd oth.small things

--- a/src/sass/blocks/_buttons.sass
+++ b/src/sass/blocks/_buttons.sass
@@ -4,7 +4,7 @@
     font-family: 'Montserrat'
     font-weight: 700
     font-size: 17px
-    line-height: 21px
+    line-height: 124%
     color: $pink_color
     width: 310px
     height: 74px
