--- a/src/sass/blocks/_titles.sass
+++ b/src/sass/blocks/_titles.sass
@@ -1,32 +1,26 @@
 .main
-    display: flex
-    height: 1080px
-    width: 1920px
-    background: url(../img/bg/main_bg.jpg) center (center/cover) no-repeat
     &__title
-        padding-top: 160px
+        padding-top: 10.6667rem
         font-family: 'SophieScholl'
         font-weight: 400
-        font-size: 85px
+        font-size: 5.6667rem
         color: $pink_color
         opacity: 0.88
         &__footer
-            font-size: 40px
+            font-size: 2.667rem
             padding-top: 0
 
     &__subtitle
-        padding: 15px 0 70px 0
-        width: 465px
-        font-family: 'Montserrat'
+        padding: 1rem 0 4.667rem 0
         font-weight: 400
-        font-size: 31px
-        line-height: 38px
+        font-size: 2rem
+        line-height: 123%
         color: $white_color
         &__footer
-            font-size: 15px
-            padding: 5px 0 25px 0
-            width: 229px
-            line-height: 18px
+            font-size: 1rem
+            padding: 0.333rem 0 1.667rem 0
+            width: 20%
+            line-height: 120%
 
 
 .title
