--- a/src/sass/blocks/_main.sass
+++ b/src/sass/blocks/_main.sass
@@ -1,23 +1,26 @@
 .main
+    height: 1080px
+    max-width: 100%
+    background: url(../img/bg/main_bg.jpg) center (center/cover) no-repeat
     &__flower
+        display: none
         position: absolute
         left: 556px
         top: 604px
 
-nav
+.oneLine
     display: flex
-    justify-content: space-between
     align-items: center
-
+    justify-content: space-between
 .main-parts
     display: flex
     justify-content: space-between
-    width: 852px
+    width: 100%
+    list-style-type: none
     &__item
-        padding: 10px 21px
-        font-family: 'Montserrat'
+        padding: 0.67rem 1.4rem
         font-weight: 500
-        font-size: 16px
+        font-size: 1.067rem
         color: $white_color
         border: 2px solid rgba(0, 0, 0, 0)
         transition: 0.5s all
@@ -29,21 +32,27 @@ nav
         
 
 .main-search
-    justify-content: space-between
+    margin-left: 0.667rem
     display: flex
-    width: 229px
-    height: 27px
+    justify-content: space-between
+    width: 21%
     &__textarea
-        padding: 4px
+        //padding: 0.26667rem
         background-color: rgba(0, 0, 0, 0)
-        font-family: 'Montserrat'
         font-weight: 500
-        font-size: 18px
+        font-size: 1.2rem
         border: none
         border-bottom: 1px solid $grey_color
         &:focus
             color: $white_color
 
+.main-contacts
+    display: none
+
 textarea::placeholder
     color: $white_color
 
+//@media (max-width: 1200px)
+//@media (max-width: 991px)
+//@media (max-width: 767px)
+//@media (max-width: 575px)
