--- a/src/sass/blocks/_main.sass
+++ b/src/sass/blocks/_main.sass
@@ -1,5 +1,5 @@
 .main
-    height: 1080px
+    min-height: 1080px
     max-width: 100%
     background: url(../img/bg/main_bg.jpg) center (center/cover) no-repeat
     &__flower
