--- a/src/sass/blocks/_buttons.sass
+++ b/src/sass/blocks/_buttons.sass
@@ -1,13 +1,12 @@
 .button
-    padding-top: 70px
-    padding: 27px 51px
-    font-family: 'Montserrat'
+    padding-top: 4.667rem
+    padding: 1.8rem 3.4rem
     font-weight: 700
-    font-size: 17px
+    font-size: 1.1334rem
     line-height: 124%
     color: $pink_color
-    width: 310px
-    height: 74px
+    width: 20.6rem
+    height: 4.93rem
     border: 2px solid $pink_color
     background-color: rgba(0, 0, 0, 0)
     transition: 0.5s all
