--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -1,5 +1,6 @@
 
 @media (max-width: 1112px)
+	//---MAINPAGE----------------------------------------------------------------------------------------------------------
 	.oneLine
 		flex-direction: column
 		align-items: flex-end
@@ -24,9 +25,22 @@
 	.container
 		padding: 3.866667rem 2.6667rem 5.3333rem 2.6667rem
 
-//-------------------------------------------------------------------------------------------------------------
+	//----TABS---------------------------------------------------------------------------------------------------------
+	.tabs-item
+		padding: 3.334rem 0 0 2.534rem
+		&__price
+			width: 21%
+		&__wrapper-descr
+			padding: 0 3.1334rem 0 3.334rem
+			width: 100%
+		&__text_second
+			width: 100%
+
+//=====================================================================================================================
+
 
 @media (max-width: 858px)
+	//---MAINPAGE----------------------------------------------------------------------------------------------------------
 	.container
 		padding: 2.6667rem
 	.main
@@ -48,9 +62,23 @@
 		&__textarea
 			font-size: 1rem
 
-//-------------------------------------------------------------------------------------------------------------
+//=====================================================================================================================
+
+@media (max-width: 804px)
+	//----TABS---------------------------------------------------------------------------------------------------------
+	.tabs
+		margin: 9.34rem auto
+		&__btn
+			padding: 2.134rem 4.334rem 2.4667rem 4.334rem
+	.tabs-item__wrapper-descr
+		padding: 0 3.1334rem 0 2.334rem
+	.tabs-item__price
+		width: 22%
+
+//=====================================================================================================================
 
 @media (max-width: 791px)
+	//---MAINPAGE----------------------------------------------------------------------------------------------------------
 	.container
 		padding: 2.5rem 1rem
 	.oneLine-mobile
@@ -121,7 +149,6 @@
 				&:last-child
 					transform: translateY(3px) rotate(45deg)
 					
-
 	.main-search__textarea
 		height: 50%
 	.main__title 
@@ -129,9 +156,36 @@
 		font-size: 5.5rem
 	.main-contacts
 		display: flex
+	//----TABS---------------------------------------------------------------------------------------------------------
 
+//=====================================================================================================================
+@media (max-width: 732px)
+	//----TABS---------------------------------------------------------------------------------------------------------
+	.tabs
+		&__list
+			padding-left: 13%
+		&__btn
+			padding: 2.134rem 3rem 2.4667rem 3rem
+	.tabs-item
+		padding: 3.334rem 0 0 2.334rem
+		&__price
+			display: none
+		&__price-mobile
+			display: block
+		&__p-second
+			&:first-child
+				padding-top: 0
+
+//=====================================================================================================================
+//@media (max-width: 600px)
+	//----TABS---------------------------------------------------------------------------------------------------------
+		/* .tabs__btn
+			padding: 2.134rem 3.334rem 2.4667rem 3.334rem */
+	
+//=====================================================================================================================
 
 @media (max-width: 512px)
+	//---MAINPAGE----------------------------------------------------------------------------------------------------------
 	.container
 		padding: 2.5rem 1rem
 	.main
@@ -142,7 +196,27 @@
 	.main-search__textarea
 		display: none
 
+	//----TABS---------------------------------------------------------------------------------------------------------
+	.tabs
+		margin: 6.34rem auto
+		&__btn
+			padding: 2rem 3rem
+			font-size: 1.6rem
+		&__list
+			padding-left: 6%
+	.tabs-item
+		padding: 3.334rem 0 0 0
+		&__title
+			font-size: 1.3rem
+		&__price-mobile
+			font-size: 1.3rem
+		&__wrapper-descr
+			padding: 0 0 0 2.334rem
+
+//=====================================================================================================================
+
 @media (max-width: 400px)
+	//---MAINPAGE----------------------------------------------------------------------------------------------------------
 	.main
 		height: 700px
 		background: url(../img/bg/main_bg.jpg) 31% 32% no-repeat
@@ -167,3 +241,22 @@
 		font-size: 1rem
 		width: 84%
 		padding: 1.5rem 1.4rem
+
+	//----TABS---------------------------------------------------------------------------------------------------------
+	.tabs
+		margin: 3.34rem auto
+		&__list
+			padding-left: 2%
+		&__btn
+			padding: 1.8rem 2rem
+			font-size: 1.2rem
+	.tabs-item
+		&__title
+			padding: 1rem 0
+			font-size: 1.1rem
+		&__price-mobile
+			font-size: 1.1rem
+		&__wrapper
+			flex-direction: column
+			&-descr
+				padding: 0
