--- a/src/sass/blocks/_tabs.sass
+++ b/src/sass/blocks/_tabs.sass
@@ -1,22 +1,21 @@
 .tabs
-    margin: 200px auto
+    margin: 13.34rem auto
     
 .tabs__list 
     display: flex
     flex-wrap: wrap
-    padding-left: 263px
+    padding-left: 23%
     margin-bottom: 0
     list-style: none
     border-bottom: 1px solid #5E5E5E
     margin-bottom: -1px
 
 .tabs__btn
-    font-family: 'Montserrat'
     font-weight: 500
-    font-size: 27px
+    font-size: 1.8rem
     text-align: center
     color: $black_color
-    padding: 32px 80px 37px 80px
+    padding: 2.134rem 5.334rem 2.4667rem 5.334rem
     cursor: pointer
     background-color: #fff
     border: none
@@ -28,41 +27,44 @@
 
 
 .tabs-item
-    padding: 80px 0 0 68px
+    padding: 5.334rem 0 0 4.534rem
     &__img
-        width: 102px
-        height: 102px
+        width: 6.8rem //102px
+        height: 6.8rem
     &__wrapper
         display: flex
     &__p
-        padding-top: 15px
+        padding-top: 1rem
         margin: 0
         
 
     &__wrapper-descr
-        padding: 0px 92px 0px 95px
+        padding: 0px 6.1334rem 0px 6.334rem
         width: 740px
     &__title
-        padding-bottom: 15px
-        font-family: 'Montserrat'
+        padding-bottom: 1rem
         font-weight: 600
-        font-size: 22px
+        font-size: 1.467rem
         color: $black_color
     &__text
-        font-family: 'Montserrat'
         font-weight: 400
-        font-size: 15px
+        font-size: 1rem
         line-height: 150%
         color: $black_color
         &_second
-            width: 800px
+            width: 53.334rem
         
     &__price
-        font-family: 'Montserrat'
         font-weight: 600
-        font-size: 22px
+        font-size: 1.467rem
         color: $black_color
-        width: 105px
+        width: 7rem
+    &__price-mobile
+        display: none
+        font-weight: 600
+        font-size: 1.467rem
+        color: $black_color
+        width: 7rem
 
 .tabs__content
     display: none
