adapt TABS is totally done

--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -162,8 +162,6 @@
 @media (max-width: 732px)
 	//----TABS---------------------------------------------------------------------------------------------------------
 	.tabs
-		&__list
-			padding-left: 13%
 		&__btn
 			padding: 2.134rem 3rem 2.4667rem 3rem
 	.tabs-item
@@ -202,8 +200,6 @@
 		&__btn
 			padding: 2rem 3rem
 			font-size: 1.6rem
-		&__list
-			padding-left: 6%
 	.tabs-item
 		padding: 3.334rem 0 0 0
 		&__title
@@ -212,6 +208,20 @@
 			font-size: 1.3rem
 		&__wrapper-descr
 			padding: 0 0 0 2.334rem
+
+//=====================================================================================================================
+@media (max-width: 421px)
+	//----TABS---------------------------------------------------------------------------------------------------------
+	.tabs
+		&__btn
+			padding: 2rem 2.6rem
+	.tabs-item__wrapper-descr
+		padding: 0 0 0 1.5rem
+	.tabs-item__img
+		width: 6rem
+		height: 6rem
+	.tabs-item__p-second
+		width: 100%
 
 //=====================================================================================================================
 
@@ -245,8 +255,6 @@
 	//----TABS---------------------------------------------------------------------------------------------------------
 	.tabs
 		margin: 3.34rem auto
-		&__list
-			padding-left: 2%
 		&__btn
 			padding: 1.8rem 2rem
 			font-size: 1.2rem
