--- a/src/sass/blocks/_tabs.sass
+++ b/src/sass/blocks/_tabs.sass
@@ -4,7 +4,7 @@
 .tabs__list 
     display: flex
     flex-wrap: wrap
-    padding-left: 23%
+    justify-content: center
     margin-bottom: 0
     list-style: none
     border-bottom: 1px solid #5E5E5E
@@ -36,6 +36,8 @@
     &__p
         padding-top: 1rem
         margin: 0
+        &-second
+            width: 70.8%
         
 
     &__wrapper-descr
