--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -1,4 +1,6 @@
 
+//=====================================================================================================================
+
 @media (max-width: 1112px)
 	//---MAINPAGE----------------------------------------------------------------------------------------------------------
 	.oneLine
@@ -35,6 +37,8 @@
 			width: 100%
 		&__text_second
 			width: 100%
+		&__p-second
+			width: 90.8%
 
 //=====================================================================================================================
 
@@ -67,13 +71,17 @@
 @media (max-width: 804px)
 	//----TABS---------------------------------------------------------------------------------------------------------
 	.tabs
-		margin: 9.34rem auto
+		margin: 9.34rem 0 0 0
 		&__btn
 			padding: 2.134rem 4.334rem 2.4667rem 4.334rem
 	.tabs-item__wrapper-descr
 		padding: 0 3.1334rem 0 2.334rem
 	.tabs-item__price
 		width: 22%
+
+	//----GALLERY---------------------------------------------------------------------------------------------------------
+	.gallery
+		margin: 9.34rem 0 0 0
 
 //=====================================================================================================================
 
@@ -156,7 +164,15 @@
 		font-size: 5.5rem
 	.main-contacts
 		display: flex
+
 	//----TABS---------------------------------------------------------------------------------------------------------
+	.tabs-item__wrapper-descr
+		padding: 0 2.1334rem 0 2.334rem
+	//----GALLERY---------------------------------------------------------------------------------------------------------
+	.container_gallery
+		padding: 2.5rem 0rem 2.5rem 1rem
+	.gallery__wrapper
+		margin: 3.334rem 0 0 0
 
 //=====================================================================================================================
 @media (max-width: 732px)
@@ -173,12 +189,6 @@
 		&__p-second
 			&:first-child
 				padding-top: 0
-
-//=====================================================================================================================
-//@media (max-width: 600px)
-	//----TABS---------------------------------------------------------------------------------------------------------
-		/* .tabs__btn
-			padding: 2.134rem 3.334rem 2.4667rem 3.334rem */
 	
 //=====================================================================================================================
 
@@ -191,12 +201,12 @@
 		background: url(../img/bg/main_bg.jpg) 26% 0%/cover no-repeat
 	.main-search
 		width: 30%
-	.main-search__textarea
-		display: none
+		&__textarea
+			display: none
 
 	//----TABS---------------------------------------------------------------------------------------------------------
 	.tabs
-		margin: 6.34rem auto
+		margin: 6.34rem 0 0 0
 		&__btn
 			padding: 2rem 3rem
 			font-size: 1.6rem
@@ -209,19 +219,33 @@
 		&__wrapper-descr
 			padding: 0 0 0 2.334rem
 
+	//----GALLERY---------------------------------------------------------------------------------------------------------
+	.gallery
+		margin: 6.34rem 0 0 0
+		&__wrapper
+			margin: 4.334rem 0 0 0
+		&__img
+			padding-top: 0.4rem
+	.container_gallery
+		padding: 2.5rem 0.4rem 2.5rem 1rem
+	.title
+		font-size: 1.6rem
+	
+
 //=====================================================================================================================
 @media (max-width: 421px)
 	//----TABS---------------------------------------------------------------------------------------------------------
 	.tabs
 		&__btn
 			padding: 2rem 2.6rem
-	.tabs-item__wrapper-descr
-		padding: 0 0 0 1.5rem
-	.tabs-item__img
-		width: 6rem
-		height: 6rem
-	.tabs-item__p-second
-		width: 100%
+	.tabs-item
+		&__wrapper-descr
+			padding: 0 0 0 1.5rem
+		&__img
+			width: 6rem
+			height: 6rem
+		&__p-second
+			width: 100%
 
 //=====================================================================================================================
 
@@ -254,7 +278,7 @@
 
 	//----TABS---------------------------------------------------------------------------------------------------------
 	.tabs
-		margin: 3.34rem auto
+		margin: 3.34rem 0 0 0
 		&__btn
 			padding: 1.8rem 2rem
 			font-size: 1.2rem
@@ -268,3 +292,9 @@
 			flex-direction: column
 			&-descr
 				padding: 0
+
+	//----GALLERY---------------------------------------------------------------------------------------------------------
+	.gallery
+		margin: 3.34rem 0 0 0 
+		&__wrapper
+			margin: 2.334rem 0 0 0
