--- a/src/sass/blocks/_gallery.sass
+++ b/src/sass/blocks/_gallery.sass
@@ -1,10 +1,36 @@
+.container_gallery
+    margin: 0 auto
+    max-width: 802px
+    padding: 5.866667rem 1.70403333rem 5.3333rem 2.6667rem
+
 .gallery
     &__wrapper
-        margin: 80px 0 200px 0
+        display: flex
+        flex-wrap: wrap
+        justify-content: space-between
+        margin: 5.334rem 0 0 0
+    &__wrapper-flowers
+        display: flex
+        justify-content: space-between
+        width: 100%
+    &__wrapper-girls
+        display: flex
+        justify-content: space-between
+        width: 100%
     &__img
-        padding: 41px 37px 0 0 
-        &_without-padding
+        padding-top: 0.9rem
+        &:nth-child(1)
             padding-right: 0
+            max-width: 98%            
+        &_fl
+            width: 90%
+        &_7
+            width: 96%
+        &_8
+            width: 96%
 
+
+
+    
 
         
