--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -1,7 +1,7 @@
 
 //=====================================================================================================================
 
-@media (max-width: 1112px)
+@media (max-width: 1112px) //1ST BREAKE
 	//---MAINPAGE----------------------------------------------------------------------------------------------------------
 	.oneLine
 		flex-direction: column
@@ -25,9 +25,11 @@
 		font-size: 1.8rem
 		padding-bottom: 2.667rem
 	.container
-		padding: 3.866667rem 2.6667rem 5.3333rem 2.6667rem
+		padding: 3.866667rem 2.6667rem 0 2.6667rem
 
 	//----TABS---------------------------------------------------------------------------------------------------------
+	.tabs
+		@include mgFirst
 	.tabs-item
 		padding: 3.334rem 0 0 2.534rem
 		&__price
@@ -40,7 +42,13 @@
 		&__p-second
 			width: 90.8%
 
-//=====================================================================================================================
+	//----GALLERY---------------------------------------------------------------------------------------------------------
+	.gallery
+		@include mgFirst
+	
+	//----ABOUT---------------------------------------------------------------------------------------------------------
+	.about
+		@include mgFirst
 
 
 @media (max-width: 858px)
@@ -66,6 +74,31 @@
 		&__textarea
 			font-size: 1rem
 
+	//----TABS---------------------------------------------------------------------------------------------------------
+	.tabs
+		@include mgSecond
+
+	//----GALLERY---------------------------------------------------------------------------------------------------------
+	.gallery
+		@include mgSecond
+	
+	//----ABOUT---------------------------------------------------------------------------------------------------------
+	.about
+		@include mgSecond
+	
+
+//=====================================================================================================================
+@media (max-width: 807px)
+	//----ABOUT---------------------------------------------------------------------------------------------------------
+	.about
+		&__p
+			&:first-child
+				padding-top: 1.5334rem
+		&__img
+			display: block
+			float: none
+			margin: 0 auto
+		
 //=====================================================================================================================
 
 @media (max-width: 804px)
@@ -80,8 +113,12 @@
 		width: 22%
 
 	//----GALLERY---------------------------------------------------------------------------------------------------------
-	.gallery
-		margin: 9.34rem 0 0 0
+	//.gallery
+		//@include mgFirst
+	
+	//----ABOUT---------------------------------------------------------------------------------------------------------
+	//.about
+		//@include mgFirst
 
 //=====================================================================================================================
 
@@ -206,7 +243,7 @@
 
 	//----TABS---------------------------------------------------------------------------------------------------------
 	.tabs
-		margin: 6.34rem 0 0 0
+		@include mgThird
 		&__btn
 			padding: 2rem 3rem
 			font-size: 1.6rem
@@ -221,7 +258,7 @@
 
 	//----GALLERY---------------------------------------------------------------------------------------------------------
 	.gallery
-		margin: 6.34rem 0 0 0
+		@include mgThird
 		&__wrapper
 			margin: 4.334rem 0 0 0
 		&__img
@@ -230,6 +267,10 @@
 		padding: 2.5rem 0.4rem 2.5rem 1rem
 	.title
 		font-size: 1.6rem
+	
+	//----ABOUT---------------------------------------------------------------------------------------------------------
+	.about
+		@include mgThird
 	
 
 //=====================================================================================================================
@@ -278,7 +319,7 @@
 
 	//----TABS---------------------------------------------------------------------------------------------------------
 	.tabs
-		margin: 3.34rem 0 0 0
+		@include mgFourth
 		&__btn
 			padding: 1.8rem 2rem
 			font-size: 1.2rem
@@ -295,6 +336,12 @@
 
 	//----GALLERY---------------------------------------------------------------------------------------------------------
 	.gallery
-		margin: 3.34rem 0 0 0 
+		@include mgFourth
 		&__wrapper
 			margin: 2.334rem 0 0 0
+	.title
+		font-size: 1.2rem
+	
+	//----ABOUT---------------------------------------------------------------------------------------------------------
+	.about
+		@include mgFourth
