--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -37,6 +37,7 @@ html, body
 	justify-content: space-between
 	align-items: center
 
+@import 'base/mixins'
 @import 'base/variables'
 @import 'blocks/main'
 @import 'blocks/buttons'
