--- a/src/sass/blocks/_about.sass
+++ b/src/sass/blocks/_about.sass
@@ -1,18 +1,20 @@
 .about
     &__wrapper
-        margin: 80px 0 200px 0
-        display: flex
+        margin: 5.334rem 0 0 0
+        //display: flex
     &__text
-        font-family: 'Montserrat'
         font-weight: 400
-        font-size: 15px
-        line-height: 150%
+        font-size: 1rem
+        line-height: 135%
         color: $black_color
-        padding-left: 32px
+        //padding-left: 2.1334rem
     &__p
-        padding-top: 23px
+        padding-top: 1.5334rem
         margin: 0
-
-p.nopadding
-    padding-top: 0
-
+        &:first-child
+            padding-top: 0
+    &__img
+        float: left
+        max-width: 100%
+        height: 100%
+        margin: 0 1rem 0 0
