--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -23,7 +23,7 @@ html, body
 .container
 	margin: 0 auto
 	padding: 5.866667rem 2.6667rem 5.3333rem 2.6667rem
-	max-width: 1142px
+	max-width: 1182px
 	//max-width: 59.4791667%
 	&__footer
 		margin: 0 auto 1.5333rem auto
@@ -31,8 +31,9 @@ html, body
 
 
 .container-form
-	max-width: 1142px
-	margin: 162px auto
+	width: 1182px
+	margin: 0 auto
+	padding: 5.866667rem 2.6667rem 5.3333rem 2.6667rem
 	display: flex
 	justify-content: space-between
 	align-items: center
