--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -1,7 +1,12 @@
 
 //=====================================================================================================================
+@media (max-width: 1160px)
+	//----FORM---------------------------------------------------------------------------------------------------------
 
-@media (max-width: 1112px) //1ST BREAKE
+
+//=====================================================================================================================
+
+@media (max-width: 1112px) //1ST BRAKE
 	//---MAINPAGE----------------------------------------------------------------------------------------------------------
 	.oneLine
 		flex-direction: column
@@ -43,18 +48,64 @@
 			width: 90.8%
 
 	//----GALLERY---------------------------------------------------------------------------------------------------------
+	.container_gallery
+		padding: 3.866667rem 2.6667rem 0 2.6667rem
 	.gallery
 		@include mgFirst
 	
 	//----ABOUT---------------------------------------------------------------------------------------------------------
 	.about
 		@include mgFirst
+	
+	//----FORM---------------------------------------------------------------------------------------------------------
+	.container-form
+		padding: 3.866667rem 2.6667rem 0 2.6667rem
+	.form
+		@include mgFirst
+		&__contacts-wrapper
+			padding: 3rem 3rem
+	.form-main
+		padding: 3rem 3rem
+		height: 100%
+//=====================================================================================================================
+
+@media (max-width: 1016px)
+	//----FORM---------------------------------------------------------------------------------------------------------
+	.form
+		&__contacts-wrapper
+			padding: 2rem 2rem
+	.form-main
+		padding: 2rem 2rem
 
 
-@media (max-width: 858px)
+//=====================================================================================================================
+
+@media (max-width: 927px)
+	//----FORM---------------------------------------------------------------------------------------------------------
+	.container-form
+		flex-direction: column
+	.form
+		background: none
+		&__contacts
+			background: url('../img/bg/form_bg.jpg') center center/cover no-repeat
+			width: 109.5%
+		&__contacts-wrapper
+			width: 22rem
+			margin: 0 auto
+			&__changing-bg
+				padding: 7rem 0 7rem 0
+	.form-main
+		padding: 2rem 2rem
+		margin: 7rem 0 0 0
+		border: 2px solid $pink_color
+		width: 100%
+
+
+//=====================================================================================================================
+@media (max-width: 858px) //SECOND BRAKE
 	//---MAINPAGE----------------------------------------------------------------------------------------------------------
 	.container
-		padding: 2.6667rem
+		padding: 2.6667rem 2.6667rem 0 2.6667rem 
 	.main
 		height: 860px
 		background: url(../img/bg/main_bg.jpg) 10% 0%/cover no-repeat
@@ -81,11 +132,20 @@
 	//----GALLERY---------------------------------------------------------------------------------------------------------
 	.gallery
 		@include mgSecond
+	.container__gallery
+		padding: 2.6667rem 1.2rem 0 2.6667rem
 	
 	//----ABOUT---------------------------------------------------------------------------------------------------------
 	.about
 		@include mgSecond
 	
+	//----FORM---------------------------------------------------------------------------------------------------------
+	.form
+		@include mgSecond
+	.container-form
+		padding: 2.6667rem 2.6667rem 0 2.6667rem
+	.form__contacts
+		width: 110%
 
 //=====================================================================================================================
 @media (max-width: 807px)
@@ -98,13 +158,15 @@
 			display: block
 			float: none
 			margin: 0 auto
-		
+	
+	//----FORM---------------------------------------------------------------------------------------------------------
+	.form__contacts
+		width: 111%
 //=====================================================================================================================
 
 @media (max-width: 804px)
 	//----TABS---------------------------------------------------------------------------------------------------------
 	.tabs
-		margin: 9.34rem 0 0 0
 		&__btn
 			padding: 2.134rem 4.334rem 2.4667rem 4.334rem
 	.tabs-item__wrapper-descr
@@ -119,13 +181,15 @@
 	//----ABOUT---------------------------------------------------------------------------------------------------------
 	//.about
 		//@include mgFirst
+	
+	//----FORM---------------------------------------------------------------------------------------------------------
 
 //=====================================================================================================================
 
 @media (max-width: 791px)
 	//---MAINPAGE----------------------------------------------------------------------------------------------------------
 	.container
-		padding: 2.5rem 1rem
+		padding: 2.5rem 1rem 0 1rem
 	.oneLine-mobile
 		margin-top: 3rem
 		display: flex
@@ -176,7 +240,6 @@
 			top: 50%
 			transform: translateY(-50%)
 			width: 2.5rem
-			//height: 1.6rem
 		&__item
 			display: block
 			margin-bottom: 0.4rem
@@ -205,11 +268,19 @@
 	//----TABS---------------------------------------------------------------------------------------------------------
 	.tabs-item__wrapper-descr
 		padding: 0 2.1334rem 0 2.334rem
+
 	//----GALLERY---------------------------------------------------------------------------------------------------------
 	.container_gallery
-		padding: 2.5rem 0rem 2.5rem 1rem
+		padding: 2.5rem 0rem 0 1rem
 	.gallery__wrapper
 		margin: 3.334rem 0 0 0
+	
+	//----FORM---------------------------------------------------------------------------------------------------------
+	.container-form
+		padding: 2.5rem 1rem 0 1rem
+	.form__contacts
+		width: 104%
+
 
 //=====================================================================================================================
 @media (max-width: 732px)
@@ -227,12 +298,23 @@
 			&:first-child
 				padding-top: 0
 	
+	//----FORM---------------------------------------------------------------------------------------------------------
+
 //=====================================================================================================================
 
-@media (max-width: 512px)
+@media (max-width: 602px)
+	//----FORM---------------------------------------------------------------------------------------------------------
+	.form__title__black
+		text-align: center
+	.form-columns
+		flex-direction: column
+		align-items: center
+	.form-column
+		width: 100%
+//=====================================================================================================================
+
+@media (max-width: 512px) //THIRD BRAKE
 	//---MAINPAGE----------------------------------------------------------------------------------------------------------
-	.container
-		padding: 2.5rem 1rem
 	.main
 		height: 970px
 		background: url(../img/bg/main_bg.jpg) 26% 0%/cover no-repeat
@@ -264,13 +346,23 @@
 		&__img
 			padding-top: 0.4rem
 	.container_gallery
-		padding: 2.5rem 0.4rem 2.5rem 1rem
+		padding: 2.5rem 0.4rem 0 1rem
 	.title
 		font-size: 1.6rem
 	
 	//----ABOUT---------------------------------------------------------------------------------------------------------
 	.about
 		@include mgThird
+
+	//----FORM---------------------------------------------------------------------------------------------------------
+	.form
+		@include mgThird
+		&__title
+			font-size: 1.3rem
+			&__black
+				font-size: 1.3rem
+	.form__contacts
+		width: 106%
 	
 
 //=====================================================================================================================
@@ -287,10 +379,13 @@
 			height: 6rem
 		&__p-second
 			width: 100%
-
+	
+	//----FORM---------------------------------------------------------------------------------------------------------
+	.form__contacts
+		width: 108%
 //=====================================================================================================================
 
-@media (max-width: 400px)
+@media (max-width: 400px) //FOURTH BRAKE
 	//---MAINPAGE----------------------------------------------------------------------------------------------------------
 	.main
 		height: 700px
@@ -345,3 +440,16 @@
 	//----ABOUT---------------------------------------------------------------------------------------------------------
 	.about
 		@include mgFourth
+	
+	//----FORM---------------------------------------------------------------------------------------------------------
+	.form
+		@include mgThird
+		&__title
+			font-size: 1.1rem
+			&__black
+				font-size: 1.1rem
+	.form__contacts-wrapper
+		width: 20rem
+	.button__form
+		width: 100%
+		padding: inherit
