--- a/src/sass/blocks/_buttons.sass
+++ b/src/sass/blocks/_buttons.sass
@@ -15,13 +15,15 @@
         color: $white_color
         background-color: $pink_color
     &__form
-        width: 260px
+        margin-top: 0.2rem
+        text-align: center
+        width: 100% //260px
         height: 50px
         background: $pink_color
         font-weight: 600
         font-size: 17px
         color: $white_color
-        padding: 13px 47px
+        padding: 13px 0 13px 0
 .button__footer
     padding: 10px 44px
     width: 189px
