--- a/src/sass/blocks/_form.sass
+++ b/src/sass/blocks/_form.sass
@@ -1,82 +1,87 @@
 .form
+    margin: 13.34rem 0 0 0
     background: url('../img/bg/form_bg.jpg') center center/cover no-repeat
-    width: 1920px
+    max-width: 100% //1920px
     min-height: 824px
     display: flex
     align-items: center
     &__contacts-wrapper
-        padding: 65px 57px
-        width: 343px
-        height: 499px
+        padding: 4.334rem 3.8rem //65px 57px
+        width: 100% //343px 100%
+        //height: 33.2667rem //499px
         background: rgba(24, 24, 24, 0.1)
         border: 3px solid $white_color
     &__adress
-        padding: 5px 0 0 0
+        padding: 0.33333rem 0 0 0 //5px 0 0 0
     &__icons-wrapper
-        padding-top: 40px
+        padding-top: 2.6667rem //40px
         display: flex
         justify-content: space-between
         align-items: center
     &__icon
         padding: 0
-        width: 43px
+        width: 2.86667rem //43px
         transition: 0.5s all
         &:hover
-            width: 39px
-            padding: 3px
+            width: 2.6rem //39px
+            padding: 0.2rem //3px
     &__icon-border
-        width: 45px
-        height: 45px
+        width: 3rem //45px
+        height: 3rem //45px
         display: flex
         justify-content: center
         align-items: center
         border: 2px solid $white_color
     &__link
-        height: 42px
+        height: 2.8rem //42px
         &:hover
-            height: 39px
+            height: 2.6rem //39px
     &__info
         display: block
 
+.form-columns
+    display: flex
+    justify-content: space-between
 .form-column
-    width: 260px
+    width: 44%//width: 17.3334rem //260px
     &__second
-        padding: 37px 0 0 63px
+        display: flex
+        flex-direction: column
+        width: 46%
+        //align-items: flex-end
+        //padding: 2.46667rem 0 0 4.2rem //37px 0 0 63px
         
 
 .form-main
-    display: flex
-    flex-wrap: wrap
-    margin-left: 75px
-    padding: 64px 69px
-    width: 724px
-    height: 500px
+    //display: flex
+    //flex-wrap: wrap
+    padding: 4.2667rem 4.6rem //64px 69px
+    width: 64% //724px
+    border: 3px solid white
     background: $white_color
     &__item
         display: flex
         flex-direction: column
     &__textarea
-        margin: 5px 0 55px 0
-        padding: 15px 17px
-        font-family: 'Montserrat'
+        margin: 0.33334rem 0 3.6667rem 0 //5px 0 55px 0
+        padding: 1rem 1.13334rem //15px 17px
         font-weight: 500
-        font-size: 15px
+        font-size: 1rem //15px
         letter-spacing: -0.03em
-        width: 260px
-        height: 161px
+        width: 100%//17.3334rem //260px
+        height: 10.7333334rem //161px
         background: #E5E5E5
         border: none
         &::placeholder
             color: $grey_color
     &__input
-        margin-top: 5px
-        padding: 15px 17px
-        font-family: 'Montserrat'
+        margin-top: 0.33334rem //5px
+        padding: 1rem 1.13334rem //15px 17px
         font-weight: 500
-        font-size: 15px
+        font-size: 1rem //15px
         letter-spacing: -0.03em
-        width: 260px
-        height: 50px
+        width: 100% //17.3334rem //260px 124%
+        height: 3.333334rem //50px
         background: #E5E5E5
         border: none
         &::placeholder
@@ -89,11 +94,10 @@
     border: 1px solid red
 label.error
     position: absolute
-    padding-top: 115px
-    font-family: 'Montserrat'
+    padding-top: 7.66667rem //115px
     border: none
     font-weight: 400
-    font-size: 14px
+    font-size: 0.933334rem //14px
     color: #FF0000
 
         
