--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -30,7 +30,7 @@
 		font-size: 1.8rem
 		padding-bottom: 2.667rem
 	.container
-		padding: 3.866667rem 2.6667rem 0 2.6667rem
+		@include padFirst
 
 	//----TABS---------------------------------------------------------------------------------------------------------
 	.tabs
@@ -49,7 +49,7 @@
 
 	//----GALLERY---------------------------------------------------------------------------------------------------------
 	.container_gallery
-		padding: 3.866667rem 2.6667rem 0 2.6667rem
+		@include padFirst
 	.gallery
 		@include mgFirst
 	
@@ -59,7 +59,7 @@
 	
 	//----FORM---------------------------------------------------------------------------------------------------------
 	.container-form
-		padding: 3.866667rem 2.6667rem 0 2.6667rem
+		@include padFirst
 	.form
 		@include mgFirst
 		&__contacts-wrapper
@@ -67,6 +67,9 @@
 	.form-main
 		padding: 3rem 3rem
 		height: 100%
+	
+	//----FOOTER---------------------------------------------------------------------------------------------------------
+
 //=====================================================================================================================
 
 @media (max-width: 1016px)
@@ -76,6 +79,8 @@
 			padding: 2rem 2rem
 	.form-main
 		padding: 2rem 2rem
+
+	//----FOOTER---------------------------------------------------------------------------------------------------------
 
 
 //=====================================================================================================================
@@ -100,12 +105,15 @@
 		border: 2px solid $pink_color
 		width: 100%
 
+	//----FOOTER---------------------------------------------------------------------------------------------------------
+
+
 
 //=====================================================================================================================
 @media (max-width: 858px) //SECOND BRAKE
 	//---MAINPAGE----------------------------------------------------------------------------------------------------------
 	.container
-		padding: 2.6667rem 2.6667rem 0 2.6667rem 
+		@include padSecond
 	.main
 		height: 860px
 		background: url(../img/bg/main_bg.jpg) 10% 0%/cover no-repeat
@@ -143,9 +151,11 @@
 	.form
 		@include mgSecond
 	.container-form
-		padding: 2.6667rem 2.6667rem 0 2.6667rem
+		@include padSecond
 	.form__contacts
 		width: 110%
+
+	//----FOOTER---------------------------------------------------------------------------------------------------------
 
 //=====================================================================================================================
 @media (max-width: 807px)
@@ -162,6 +172,12 @@
 	//----FORM---------------------------------------------------------------------------------------------------------
 	.form__contacts
 		width: 111%
+
+	//----FOOTER---------------------------------------------------------------------------------------------------------
+	.footer__block
+		&:nth-child(3)
+			display: none
+			
 //=====================================================================================================================
 
 @media (max-width: 804px)
@@ -184,12 +200,14 @@
 	
 	//----FORM---------------------------------------------------------------------------------------------------------
 
+	//----FOOTER---------------------------------------------------------------------------------------------------------
+
 //=====================================================================================================================
 
 @media (max-width: 791px)
 	//---MAINPAGE----------------------------------------------------------------------------------------------------------
 	.container
-		padding: 2.5rem 1rem 0 1rem
+		@include padThird
 	.oneLine-mobile
 		margin-top: 3rem
 		display: flex
@@ -281,6 +299,10 @@
 	.form__contacts
 		width: 104%
 
+	//----FOOTER---------------------------------------------------------------------------------------------------------
+	.container-footer
+		padding: 0 1rem
+
 
 //=====================================================================================================================
 @media (max-width: 732px)
@@ -300,6 +322,8 @@
 	
 	//----FORM---------------------------------------------------------------------------------------------------------
 
+	//----FOOTER---------------------------------------------------------------------------------------------------------
+
 //=====================================================================================================================
 
 @media (max-width: 602px)
@@ -311,6 +335,12 @@
 		align-items: center
 	.form-column
 		width: 100%
+
+	//----FOOTER---------------------------------------------------------------------------------------------------------
+	.footer__block
+		&:nth-child(2)
+			display: none
+			
 //=====================================================================================================================
 
 @media (max-width: 512px) //THIRD BRAKE
@@ -364,6 +394,31 @@
 	.form__contacts
 		width: 106%
 	
+	//----FOOTER---------------------------------------------------------------------------------------------------------
+	/* .footer
+		height: 88%
+	/* .blocks-wrapper
+		flex-direction: column */
+	
+//=====================================================================================================================
+@media (max-width: 455px)
+	//----FOOTER---------------------------------------------------------------------------------------------------------
+	.footer
+		height: 100%
+		&__block
+			width: 100%
+			&:last-child
+				margin: 2.5rem 0
+		&__social
+			width: 100%
+		&__input
+			width: 100% //189px
+	.blocks-wrapper
+		flex-direction: column 
+	.button__footer
+		width: 100%
+		height: 3.7rem
+
 
 //=====================================================================================================================
 @media (max-width: 421px)
@@ -383,6 +438,9 @@
 	//----FORM---------------------------------------------------------------------------------------------------------
 	.form__contacts
 		width: 108%
+
+	//----FOOTER---------------------------------------------------------------------------------------------------------
+
 //=====================================================================================================================
 
 @media (max-width: 400px) //FOURTH BRAKE
@@ -453,3 +511,5 @@
 	.button__form
 		width: 100%
 		padding: inherit
+
+	//----FOOTER---------------------------------------------------------------------------------------------------------
