--- a/src/sass/base/_mixins.sass
+++ b/src/sass/base/_mixins.sass
@@ -9,6 +9,21 @@
 
 @mixin mgFourth
     margin: 6.34rem 0 0 0
+
+//===============================================
+
+@mixin padFirst
+    padding: 3.866667rem 2.6667rem 0 2.6667rem
+
+
+@mixin padSecond
+    padding: 2.6667rem 2.6667rem 0 2.6667rem 
+
+@mixin padThird()
+    padding: 2.5rem 1rem 0 1rem
+    
+    
+    
     
 
 
