--- a/src/sass/blocks/_titles.sass
+++ b/src/sass/blocks/_titles.sass
@@ -19,7 +19,7 @@
         &__footer
             font-size: 1rem
             padding: 0.333rem 0 1.667rem 0
-            width: 20%
+            //width: 20%
             line-height: 120%
 
 
